--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "https://aqsaabbasi2690.github.io/repo-e-com/",
+{ "homepage": "https://aqsaabbasi2690.github.io/E-commerce",
   "name": "jsecom_youtube",
   "private": true,
   "version": "0.0.0",
