--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "https://aqsaabbasi2690.github.io/e-commerce",
+{ "homepage": "https://aqsaabbasi2690.github.io/repo-e-com/",
   "name": "jsecom_youtube",
   "private": true,
   "version": "0.0.0",
